# ProjectGideonAI

./: README.md  package.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css  index.html  main.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
