[package]
name = "project-gideon-desktop"
version = "0.1.0"
description = "Project Gideon Desktop"
authors = ["Project Gideon AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
screenshots = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
