[package]
name = "gideon-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
